// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TripDayComponent Snapshots matches editable snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="space-y-4"
      >
        <div
          class="overflow-x-auto rounded-lg"
        >
          <table
            class="w-full border-collapse bg-white dark:bg-gray-800 shadow-sm divide-x divide-gray-200 dark:divide-gray-600"
          >
            <thead
              class="bg-gray-50 dark:bg-gray-700"
            >
              <tr
                class="divide-x divide-gray-200 dark:divide-gray-600"
              >
                <th
                  class="w-8 p-2"
                >
                  <svg
                    class="lucide lucide-move-vertical w-4 h-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 2v20"
                    />
                    <path
                      d="m8 18 4 4 4-4"
                    />
                    <path
                      d="m8 6 4-4 4 4"
                    />
                  </svg>
                   
                </th>
                <th
                  class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100 w-20"
                >
                  DATE
                </th>
                <th
                  class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
                >
                  ITINERARY
                </th>
                <th
                  class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
                >
                  RESERVATIONS
                </th>
                <th
                  class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
                >
                  LODGING
                </th>
                <th
                  class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100 w-20"
                >
                  TRAVEL
                  <br />
                  TIME
                </th>
                <th
                  class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
                >
                  NOTES
                </th>
                <th
                  class="w-8 p-4"
                >
                  <svg
                    class="lucide lucide-trash2 w-4 h-4 text-red-300"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3 6h18"
                    />
                    <path
                      d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
                    />
                    <path
                      d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
                    />
                    <line
                      x1="10"
                      x2="10"
                      y1="11"
                      y2="17"
                    />
                    <line
                      x1="14"
                      x2="14"
                      y1="11"
                      y2="17"
                    />
                  </svg>
                </th>
              </tr>
            </thead>
            <tbody
              class="divide-y divide-gray-200 dark:divide-gray-600"
            >
              <tr
                class="group hover:bg-gray-50 dark:hover:bg-gray-700/50 transition-colors divide-x divide-gray-200 dark:divide-gray-600"
                draggable="true"
              >
                <td
                  class="w-8 cursor-move"
                >
                  <svg
                    class="lucide lucide-grip-vertical w-4 h-4 mx-auto opacity-0 group-hover:opacity-100"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="9"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="9"
                      cy="5"
                      r="1"
                    />
                    <circle
                      cx="9"
                      cy="19"
                      r="1"
                    />
                    <circle
                      cx="15"
                      cy="12"
                      r="1"
                    />
                    <circle
                      cx="15"
                      cy="5"
                      r="1"
                    />
                    <circle
                      cx="15"
                      cy="19"
                      r="1"
                    />
                  </svg>
                </td>
                <td
                  class="p-1 align-middle w-40"
                >
                  <div
                    class="relative"
                  >
                    <div
                      class="absolute left-3 top-1/2 transform -translate-y-1/2 cursor-pointer"
                    >
                      <svg
                        class="lucide lucide-calendar-days w-4 h-4 text-purple-500 dark:text-purple-400"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 2v4"
                        />
                        <path
                          d="M16 2v4"
                        />
                        <rect
                          height="18"
                          rx="2"
                          width="18"
                          x="3"
                          y="4"
                        />
                        <path
                          d="M3 10h18"
                        />
                        <path
                          d="M8 14h.01"
                        />
                        <path
                          d="M12 14h.01"
                        />
                        <path
                          d="M16 14h.01"
                        />
                        <path
                          d="M8 18h.01"
                        />
                        <path
                          d="M12 18h.01"
                        />
                        <path
                          d="M16 18h.01"
                        />
                      </svg>
                    </div>
                    <input
                      class="pl-9 pr-3 py-2 w-full text-sm rounded-lg border border-gray-200 dark:border-gray-700 focus:border-purple-400 dark:focus:border-purple-500 focus:ring-2 focus:ring-purple-200 dark:focus:ring-purple-800 bg-white dark:bg-gray-800 transition-colors focus:outline-none "
                      placeholder="MM/DD/YYYY"
                      type="text"
                      value="2024-02-01"
                    />
                  </div>
                </td>
                <td
                  class="p-1"
                >
                  <div>
                    <span
                      class="
            cursor-text hover:bg-gray-50 dark:hover:bg-gray-800
            inline-block w-full whitespace-pre-wrap rounded-lg p-2
            w-full bg-transparent text-sm text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-1 focus:ring-purple-500 rounded px-2 py-1 resize-none focus:ring-2 focus:ring-purple-500 focus:outline-none
        "
                      data-testid="readonly-span-itinerary"
                      role="textbox"
                    >
                      City tour
                    </span>
                  </div>
                </td>
                <td
                  class="p-1"
                >
                  <div>
                    <span
                      class="
            cursor-text hover:bg-gray-50 dark:hover:bg-gray-800
            inline-block w-full whitespace-pre-wrap rounded-lg p-2
            w-full bg-transparent text-sm text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-1 focus:ring-purple-500 rounded px-2 py-1 resize-none focus:ring-2 focus:ring-purple-500 focus:outline-none
        "
                      data-testid="readonly-span-reservations"
                      role="textbox"
                    >
                      Tour booking #123
                    </span>
                  </div>
                </td>
                <td
                  class="p-1"
                >
                  <div>
                    <span
                      class="
            cursor-text hover:bg-gray-50 dark:hover:bg-gray-800
            inline-block w-full whitespace-pre-wrap rounded-lg p-2
            w-full bg-transparent text-sm text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-1 focus:ring-purple-500 rounded px-2 py-1 focus:ring-2 focus:ring-purple-500 focus:outline-none
        "
                      data-testid="readonly-span-lodging"
                      role="textbox"
                    >
                      Hotel ABC
                    </span>
                  </div>
                </td>
                <td
                  class="p-1"
                >
                  <div
                    class="flex items-center space-x-1"
                  >
                    <svg
                      class="lucide lucide-clock w-4 h-4 text-gray-500 dark:text-gray-400"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                      <polyline
                        points="12 6 12 12 16 14"
                      />
                    </svg>
                    <div>
                      <span
                        class="
            cursor-text hover:bg-gray-50 dark:hover:bg-gray-800
            inline-block w-full whitespace-pre-wrap rounded-lg p-2
            w-full bg-transparent text-sm text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-1 focus:ring-purple-500 rounded px-1 py-1 focus:ring-2 focus:ring-purple-500 focus:outline-none
        "
                        data-testid="readonly-span-travelTime"
                        role="textbox"
                      >
                        2h
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="p-1"
                >
                  <div>
                    <span
                      class="
            cursor-text hover:bg-gray-50 dark:hover:bg-gray-800
            inline-block w-full whitespace-pre-wrap rounded-lg p-2
            w-full bg-transparent text-sm text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-1 focus:ring-purple-500 rounded px-2 py-1 focus:ring-2 focus:ring-purple-500 focus:outline-none
        "
                      data-testid="readonly-span-notes"
                      role="textbox"
                    >
                      Bring camera
                    </span>
                  </div>
                </td>
                <td
                  class="p-4 w-8"
                >
                  <button
                    class="opacity-0 group-hover:opacity-100 text-gray-500 hover:text-red-500 dark:text-gray-400 dark:hover:text-red-400 transition-opacity"
                    type="button"
                  >
                    <svg
                      class="lucide lucide-trash2 w-4 h-4"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M3 6h18"
                      />
                      <path
                        d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
                      />
                      <path
                        d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
                      />
                      <line
                        x1="10"
                        x2="10"
                        y1="11"
                        y2="17"
                      />
                      <line
                        x1="14"
                        x2="14"
                        y1="11"
                        y2="17"
                      />
                    </svg>
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div
          class="flex justify-between items-center mt-4"
        >
          <button
            class="inline-flex items-center px-4 py-2 text-sm font-medium text-purple-600 dark:text-purple-400 hover:text-purple-700 dark:hover:text-purple-300"
            type="button"
          >
            <svg
              class="lucide lucide-plus w-4 h-4 mr-2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
            Add Day
          </button>
          <div
            class="space-x-2"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="space-y-4"
    >
      <div
        class="overflow-x-auto rounded-lg"
      >
        <table
          class="w-full border-collapse bg-white dark:bg-gray-800 shadow-sm divide-x divide-gray-200 dark:divide-gray-600"
        >
          <thead
            class="bg-gray-50 dark:bg-gray-700"
          >
            <tr
              class="divide-x divide-gray-200 dark:divide-gray-600"
            >
              <th
                class="w-8 p-2"
              >
                <svg
                  class="lucide lucide-move-vertical w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2v20"
                  />
                  <path
                    d="m8 18 4 4 4-4"
                  />
                  <path
                    d="m8 6 4-4 4 4"
                  />
                </svg>
                 
              </th>
              <th
                class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100 w-20"
              >
                DATE
              </th>
              <th
                class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
              >
                ITINERARY
              </th>
              <th
                class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
              >
                RESERVATIONS
              </th>
              <th
                class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
              >
                LODGING
              </th>
              <th
                class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100 w-20"
              >
                TRAVEL
                <br />
                TIME
              </th>
              <th
                class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
              >
                NOTES
              </th>
              <th
                class="w-8 p-4"
              >
                <svg
                  class="lucide lucide-trash2 w-4 h-4 text-red-300"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 6h18"
                  />
                  <path
                    d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
                  />
                  <path
                    d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
                  />
                  <line
                    x1="10"
                    x2="10"
                    y1="11"
                    y2="17"
                  />
                  <line
                    x1="14"
                    x2="14"
                    y1="11"
                    y2="17"
                  />
                </svg>
              </th>
            </tr>
          </thead>
          <tbody
            class="divide-y divide-gray-200 dark:divide-gray-600"
          >
            <tr
              class="group hover:bg-gray-50 dark:hover:bg-gray-700/50 transition-colors divide-x divide-gray-200 dark:divide-gray-600"
              draggable="true"
            >
              <td
                class="w-8 cursor-move"
              >
                <svg
                  class="lucide lucide-grip-vertical w-4 h-4 mx-auto opacity-0 group-hover:opacity-100"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="9"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="9"
                    cy="19"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="12"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="5"
                    r="1"
                  />
                  <circle
                    cx="15"
                    cy="19"
                    r="1"
                  />
                </svg>
              </td>
              <td
                class="p-1 align-middle w-40"
              >
                <div
                  class="relative"
                >
                  <div
                    class="absolute left-3 top-1/2 transform -translate-y-1/2 cursor-pointer"
                  >
                    <svg
                      class="lucide lucide-calendar-days w-4 h-4 text-purple-500 dark:text-purple-400"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 2v4"
                      />
                      <path
                        d="M16 2v4"
                      />
                      <rect
                        height="18"
                        rx="2"
                        width="18"
                        x="3"
                        y="4"
                      />
                      <path
                        d="M3 10h18"
                      />
                      <path
                        d="M8 14h.01"
                      />
                      <path
                        d="M12 14h.01"
                      />
                      <path
                        d="M16 14h.01"
                      />
                      <path
                        d="M8 18h.01"
                      />
                      <path
                        d="M12 18h.01"
                      />
                      <path
                        d="M16 18h.01"
                      />
                    </svg>
                  </div>
                  <input
                    class="pl-9 pr-3 py-2 w-full text-sm rounded-lg border border-gray-200 dark:border-gray-700 focus:border-purple-400 dark:focus:border-purple-500 focus:ring-2 focus:ring-purple-200 dark:focus:ring-purple-800 bg-white dark:bg-gray-800 transition-colors focus:outline-none "
                    placeholder="MM/DD/YYYY"
                    type="text"
                    value="2024-02-01"
                  />
                </div>
              </td>
              <td
                class="p-1"
              >
                <div>
                  <span
                    class="
            cursor-text hover:bg-gray-50 dark:hover:bg-gray-800
            inline-block w-full whitespace-pre-wrap rounded-lg p-2
            w-full bg-transparent text-sm text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-1 focus:ring-purple-500 rounded px-2 py-1 resize-none focus:ring-2 focus:ring-purple-500 focus:outline-none
        "
                    data-testid="readonly-span-itinerary"
                    role="textbox"
                  >
                    City tour
                  </span>
                </div>
              </td>
              <td
                class="p-1"
              >
                <div>
                  <span
                    class="
            cursor-text hover:bg-gray-50 dark:hover:bg-gray-800
            inline-block w-full whitespace-pre-wrap rounded-lg p-2
            w-full bg-transparent text-sm text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-1 focus:ring-purple-500 rounded px-2 py-1 resize-none focus:ring-2 focus:ring-purple-500 focus:outline-none
        "
                    data-testid="readonly-span-reservations"
                    role="textbox"
                  >
                    Tour booking #123
                  </span>
                </div>
              </td>
              <td
                class="p-1"
              >
                <div>
                  <span
                    class="
            cursor-text hover:bg-gray-50 dark:hover:bg-gray-800
            inline-block w-full whitespace-pre-wrap rounded-lg p-2
            w-full bg-transparent text-sm text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-1 focus:ring-purple-500 rounded px-2 py-1 focus:ring-2 focus:ring-purple-500 focus:outline-none
        "
                    data-testid="readonly-span-lodging"
                    role="textbox"
                  >
                    Hotel ABC
                  </span>
                </div>
              </td>
              <td
                class="p-1"
              >
                <div
                  class="flex items-center space-x-1"
                >
                  <svg
                    class="lucide lucide-clock w-4 h-4 text-gray-500 dark:text-gray-400"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <polyline
                      points="12 6 12 12 16 14"
                    />
                  </svg>
                  <div>
                    <span
                      class="
            cursor-text hover:bg-gray-50 dark:hover:bg-gray-800
            inline-block w-full whitespace-pre-wrap rounded-lg p-2
            w-full bg-transparent text-sm text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-1 focus:ring-purple-500 rounded px-1 py-1 focus:ring-2 focus:ring-purple-500 focus:outline-none
        "
                      data-testid="readonly-span-travelTime"
                      role="textbox"
                    >
                      2h
                    </span>
                  </div>
                </div>
              </td>
              <td
                class="p-1"
              >
                <div>
                  <span
                    class="
            cursor-text hover:bg-gray-50 dark:hover:bg-gray-800
            inline-block w-full whitespace-pre-wrap rounded-lg p-2
            w-full bg-transparent text-sm text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-1 focus:ring-purple-500 rounded px-2 py-1 focus:ring-2 focus:ring-purple-500 focus:outline-none
        "
                    data-testid="readonly-span-notes"
                    role="textbox"
                  >
                    Bring camera
                  </span>
                </div>
              </td>
              <td
                class="p-4 w-8"
              >
                <button
                  class="opacity-0 group-hover:opacity-100 text-gray-500 hover:text-red-500 dark:text-gray-400 dark:hover:text-red-400 transition-opacity"
                  type="button"
                >
                  <svg
                    class="lucide lucide-trash2 w-4 h-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3 6h18"
                    />
                    <path
                      d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
                    />
                    <path
                      d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
                    />
                    <line
                      x1="10"
                      x2="10"
                      y1="11"
                      y2="17"
                    />
                    <line
                      x1="14"
                      x2="14"
                      y1="11"
                      y2="17"
                    />
                  </svg>
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div
        class="flex justify-between items-center mt-4"
      >
        <button
          class="inline-flex items-center px-4 py-2 text-sm font-medium text-purple-600 dark:text-purple-400 hover:text-purple-700 dark:hover:text-purple-300"
          type="button"
        >
          <svg
            class="lucide lucide-plus w-4 h-4 mr-2"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          Add Day
        </button>
        <div
          class="space-x-2"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TripDayComponent Snapshots matches empty state snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="space-y-4"
      >
        <div
          class="overflow-x-auto rounded-lg"
        >
          <table
            class="w-full border-collapse bg-white dark:bg-gray-800 shadow-sm divide-x divide-gray-200 dark:divide-gray-600"
          >
            <thead
              class="bg-gray-50 dark:bg-gray-700"
            >
              <tr
                class="divide-x divide-gray-200 dark:divide-gray-600"
              >
                <th
                  class="w-8 p-2"
                >
                  <svg
                    class="lucide lucide-move-vertical w-4 h-4"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 2v20"
                    />
                    <path
                      d="m8 18 4 4 4-4"
                    />
                    <path
                      d="m8 6 4-4 4 4"
                    />
                  </svg>
                   
                </th>
                <th
                  class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100 w-20"
                >
                  DATE
                </th>
                <th
                  class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
                >
                  ITINERARY
                </th>
                <th
                  class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
                >
                  RESERVATIONS
                </th>
                <th
                  class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
                >
                  LODGING
                </th>
                <th
                  class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100 w-20"
                >
                  TRAVEL
                  <br />
                  TIME
                </th>
                <th
                  class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
                >
                  NOTES
                </th>
                <th
                  class="w-8 p-4"
                >
                  <svg
                    class="lucide lucide-trash2 w-4 h-4 text-red-300"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3 6h18"
                    />
                    <path
                      d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
                    />
                    <path
                      d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
                    />
                    <line
                      x1="10"
                      x2="10"
                      y1="11"
                      y2="17"
                    />
                    <line
                      x1="14"
                      x2="14"
                      y1="11"
                      y2="17"
                    />
                  </svg>
                </th>
              </tr>
            </thead>
            <tbody
              class="divide-y divide-gray-200 dark:divide-gray-600"
            />
          </table>
        </div>
        <div
          class="flex justify-between items-center mt-4"
        >
          <button
            class="inline-flex items-center px-4 py-2 text-sm font-medium text-purple-600 dark:text-purple-400 hover:text-purple-700 dark:hover:text-purple-300"
            type="button"
          >
            <svg
              class="lucide lucide-plus w-4 h-4 mr-2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
            Add Day
          </button>
          <div
            class="space-x-2"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="space-y-4"
    >
      <div
        class="overflow-x-auto rounded-lg"
      >
        <table
          class="w-full border-collapse bg-white dark:bg-gray-800 shadow-sm divide-x divide-gray-200 dark:divide-gray-600"
        >
          <thead
            class="bg-gray-50 dark:bg-gray-700"
          >
            <tr
              class="divide-x divide-gray-200 dark:divide-gray-600"
            >
              <th
                class="w-8 p-2"
              >
                <svg
                  class="lucide lucide-move-vertical w-4 h-4"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 2v20"
                  />
                  <path
                    d="m8 18 4 4 4-4"
                  />
                  <path
                    d="m8 6 4-4 4 4"
                  />
                </svg>
                 
              </th>
              <th
                class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100 w-20"
              >
                DATE
              </th>
              <th
                class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
              >
                ITINERARY
              </th>
              <th
                class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
              >
                RESERVATIONS
              </th>
              <th
                class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
              >
                LODGING
              </th>
              <th
                class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100 w-20"
              >
                TRAVEL
                <br />
                TIME
              </th>
              <th
                class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
              >
                NOTES
              </th>
              <th
                class="w-8 p-4"
              >
                <svg
                  class="lucide lucide-trash2 w-4 h-4 text-red-300"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3 6h18"
                  />
                  <path
                    d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
                  />
                  <path
                    d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
                  />
                  <line
                    x1="10"
                    x2="10"
                    y1="11"
                    y2="17"
                  />
                  <line
                    x1="14"
                    x2="14"
                    y1="11"
                    y2="17"
                  />
                </svg>
              </th>
            </tr>
          </thead>
          <tbody
            class="divide-y divide-gray-200 dark:divide-gray-600"
          />
        </table>
      </div>
      <div
        class="flex justify-between items-center mt-4"
      >
        <button
          class="inline-flex items-center px-4 py-2 text-sm font-medium text-purple-600 dark:text-purple-400 hover:text-purple-700 dark:hover:text-purple-300"
          type="button"
        >
          <svg
            class="lucide lucide-plus w-4 h-4 mr-2"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="M12 5v14"
            />
          </svg>
          Add Day
        </button>
        <div
          class="space-x-2"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TripDayComponent Snapshots matches read-only snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="space-y-4"
      >
        <div
          class="overflow-x-auto rounded-lg"
        >
          <table
            class="w-full border-collapse bg-white dark:bg-gray-800 shadow-sm divide-x divide-gray-200 dark:divide-gray-600"
          >
            <thead
              class="bg-gray-50 dark:bg-gray-700"
            >
              <tr
                class="divide-x divide-gray-200 dark:divide-gray-600"
              >
                <th
                  class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100 w-20"
                >
                  DATE
                </th>
                <th
                  class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
                >
                  ITINERARY
                </th>
                <th
                  class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
                >
                  RESERVATIONS
                </th>
                <th
                  class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
                >
                  LODGING
                </th>
                <th
                  class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100 w-20"
                >
                  TRAVEL
                  <br />
                  TIME
                </th>
                <th
                  class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
                >
                  NOTES
                </th>
              </tr>
            </thead>
            <tbody
              class="divide-y divide-gray-200 dark:divide-gray-600"
            >
              <tr
                class="group hover:bg-gray-50 dark:hover:bg-gray-700/50 transition-colors divide-x divide-gray-200 dark:divide-gray-600"
                draggable="false"
              >
                <td
                  class="p-1 align-middle w-40"
                >
                  <div
                    class="relative"
                  >
                    <div
                      class="absolute left-3 top-1/2 transform -translate-y-1/2 opacity-70"
                    >
                      <svg
                        class="lucide lucide-calendar-days w-4 h-4 text-purple-500 dark:text-purple-400"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 2v4"
                        />
                        <path
                          d="M16 2v4"
                        />
                        <rect
                          height="18"
                          rx="2"
                          width="18"
                          x="3"
                          y="4"
                        />
                        <path
                          d="M3 10h18"
                        />
                        <path
                          d="M8 14h.01"
                        />
                        <path
                          d="M12 14h.01"
                        />
                        <path
                          d="M16 14h.01"
                        />
                        <path
                          d="M8 18h.01"
                        />
                        <path
                          d="M12 18h.01"
                        />
                        <path
                          d="M16 18h.01"
                        />
                      </svg>
                    </div>
                    <input
                      class="pl-9 pr-3 py-2 w-full text-sm rounded-lg border border-gray-200 dark:border-gray-700 focus:border-purple-400 dark:focus:border-purple-500 focus:ring-2 focus:ring-purple-200 dark:focus:ring-purple-800 bg-white dark:bg-gray-800 transition-colors focus:outline-none opacity-70 cursor-not-allowed"
                      disabled=""
                      placeholder="MM/DD/YYYY"
                      type="text"
                      value="2024-02-01"
                    />
                  </div>
                </td>
                <td
                  class="p-1"
                >
                  <div>
                    <span
                      class="
            
            inline-block w-full whitespace-pre-wrap rounded-lg p-2
            w-full bg-transparent text-sm text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-1 focus:ring-purple-500 rounded px-2 py-1 resize-none focus:ring-2 focus:ring-purple-500 focus:outline-none
        "
                      data-testid="readonly-span-itinerary"
                      role="readonly"
                    >
                      City tour
                    </span>
                  </div>
                </td>
                <td
                  class="p-1"
                >
                  <div>
                    <span
                      class="
            
            inline-block w-full whitespace-pre-wrap rounded-lg p-2
            w-full bg-transparent text-sm text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-1 focus:ring-purple-500 rounded px-2 py-1 resize-none focus:ring-2 focus:ring-purple-500 focus:outline-none
        "
                      data-testid="readonly-span-reservations"
                      role="readonly"
                    >
                      Tour booking #123
                    </span>
                  </div>
                </td>
                <td
                  class="p-1"
                >
                  <div>
                    <span
                      class="
            
            inline-block w-full whitespace-pre-wrap rounded-lg p-2
            w-full bg-transparent text-sm text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-1 focus:ring-purple-500 rounded px-2 py-1 focus:ring-2 focus:ring-purple-500 focus:outline-none
        "
                      data-testid="readonly-span-lodging"
                      role="readonly"
                    >
                      Hotel ABC
                    </span>
                  </div>
                </td>
                <td
                  class="p-1"
                >
                  <div
                    class="flex items-center space-x-1"
                  >
                    <svg
                      class="lucide lucide-clock w-4 h-4 text-gray-500 dark:text-gray-400"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                      />
                      <polyline
                        points="12 6 12 12 16 14"
                      />
                    </svg>
                    <div>
                      <span
                        class="
            
            inline-block w-full whitespace-pre-wrap rounded-lg p-2
            w-full bg-transparent text-sm text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-1 focus:ring-purple-500 rounded px-1 py-1 focus:ring-2 focus:ring-purple-500 focus:outline-none
        "
                        data-testid="readonly-span-travelTime"
                        role="readonly"
                      >
                        2h
                      </span>
                    </div>
                  </div>
                </td>
                <td
                  class="p-1"
                >
                  <div>
                    <span
                      class="
            
            inline-block w-full whitespace-pre-wrap rounded-lg p-2
            w-full bg-transparent text-sm text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-1 focus:ring-purple-500 rounded px-2 py-1 focus:ring-2 focus:ring-purple-500 focus:outline-none
        "
                      data-testid="readonly-span-notes"
                      role="readonly"
                    >
                      Bring camera
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="space-y-4"
    >
      <div
        class="overflow-x-auto rounded-lg"
      >
        <table
          class="w-full border-collapse bg-white dark:bg-gray-800 shadow-sm divide-x divide-gray-200 dark:divide-gray-600"
        >
          <thead
            class="bg-gray-50 dark:bg-gray-700"
          >
            <tr
              class="divide-x divide-gray-200 dark:divide-gray-600"
            >
              <th
                class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100 w-20"
              >
                DATE
              </th>
              <th
                class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
              >
                ITINERARY
              </th>
              <th
                class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
              >
                RESERVATIONS
              </th>
              <th
                class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
              >
                LODGING
              </th>
              <th
                class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100 w-20"
              >
                TRAVEL
                <br />
                TIME
              </th>
              <th
                class="p-2 text-center text-sm font-medium text-gray-900 dark:text-gray-100"
              >
                NOTES
              </th>
            </tr>
          </thead>
          <tbody
            class="divide-y divide-gray-200 dark:divide-gray-600"
          >
            <tr
              class="group hover:bg-gray-50 dark:hover:bg-gray-700/50 transition-colors divide-x divide-gray-200 dark:divide-gray-600"
              draggable="false"
            >
              <td
                class="p-1 align-middle w-40"
              >
                <div
                  class="relative"
                >
                  <div
                    class="absolute left-3 top-1/2 transform -translate-y-1/2 opacity-70"
                  >
                    <svg
                      class="lucide lucide-calendar-days w-4 h-4 text-purple-500 dark:text-purple-400"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 2v4"
                      />
                      <path
                        d="M16 2v4"
                      />
                      <rect
                        height="18"
                        rx="2"
                        width="18"
                        x="3"
                        y="4"
                      />
                      <path
                        d="M3 10h18"
                      />
                      <path
                        d="M8 14h.01"
                      />
                      <path
                        d="M12 14h.01"
                      />
                      <path
                        d="M16 14h.01"
                      />
                      <path
                        d="M8 18h.01"
                      />
                      <path
                        d="M12 18h.01"
                      />
                      <path
                        d="M16 18h.01"
                      />
                    </svg>
                  </div>
                  <input
                    class="pl-9 pr-3 py-2 w-full text-sm rounded-lg border border-gray-200 dark:border-gray-700 focus:border-purple-400 dark:focus:border-purple-500 focus:ring-2 focus:ring-purple-200 dark:focus:ring-purple-800 bg-white dark:bg-gray-800 transition-colors focus:outline-none opacity-70 cursor-not-allowed"
                    disabled=""
                    placeholder="MM/DD/YYYY"
                    type="text"
                    value="2024-02-01"
                  />
                </div>
              </td>
              <td
                class="p-1"
              >
                <div>
                  <span
                    class="
            
            inline-block w-full whitespace-pre-wrap rounded-lg p-2
            w-full bg-transparent text-sm text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-1 focus:ring-purple-500 rounded px-2 py-1 resize-none focus:ring-2 focus:ring-purple-500 focus:outline-none
        "
                    data-testid="readonly-span-itinerary"
                    role="readonly"
                  >
                    City tour
                  </span>
                </div>
              </td>
              <td
                class="p-1"
              >
                <div>
                  <span
                    class="
            
            inline-block w-full whitespace-pre-wrap rounded-lg p-2
            w-full bg-transparent text-sm text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-1 focus:ring-purple-500 rounded px-2 py-1 resize-none focus:ring-2 focus:ring-purple-500 focus:outline-none
        "
                    data-testid="readonly-span-reservations"
                    role="readonly"
                  >
                    Tour booking #123
                  </span>
                </div>
              </td>
              <td
                class="p-1"
              >
                <div>
                  <span
                    class="
            
            inline-block w-full whitespace-pre-wrap rounded-lg p-2
            w-full bg-transparent text-sm text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-1 focus:ring-purple-500 rounded px-2 py-1 focus:ring-2 focus:ring-purple-500 focus:outline-none
        "
                    data-testid="readonly-span-lodging"
                    role="readonly"
                  >
                    Hotel ABC
                  </span>
                </div>
              </td>
              <td
                class="p-1"
              >
                <div
                  class="flex items-center space-x-1"
                >
                  <svg
                    class="lucide lucide-clock w-4 h-4 text-gray-500 dark:text-gray-400"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="10"
                    />
                    <polyline
                      points="12 6 12 12 16 14"
                    />
                  </svg>
                  <div>
                    <span
                      class="
            
            inline-block w-full whitespace-pre-wrap rounded-lg p-2
            w-full bg-transparent text-sm text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-1 focus:ring-purple-500 rounded px-1 py-1 focus:ring-2 focus:ring-purple-500 focus:outline-none
        "
                      data-testid="readonly-span-travelTime"
                      role="readonly"
                    >
                      2h
                    </span>
                  </div>
                </div>
              </td>
              <td
                class="p-1"
              >
                <div>
                  <span
                    class="
            
            inline-block w-full whitespace-pre-wrap rounded-lg p-2
            w-full bg-transparent text-sm text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-1 focus:ring-purple-500 rounded px-2 py-1 focus:ring-2 focus:ring-purple-500 focus:outline-none
        "
                    data-testid="readonly-span-notes"
                    role="readonly"
                  >
                    Bring camera
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
